--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^9.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "http-status": "^1.5.3"
   }
 }
