--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.13",
     "express-async-errors": "^3.1.1",
     "nodemon": "^2.0.20",
@@ -31,6 +32,8 @@
     "dotenv": "^16.0.3",
     "dotenv-expand": "^9.0.0",
     "express": "^4.18.2",
-    "http-status": "^1.5.3"
+    "http-status": "^1.5.3",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
